# rotoscan

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
include/rotoscan/: logging_defaults.hpp  parser.hpp  scan.hpp  tcp_client.hpp  tty_client.hpp
rotoscan/: CMakeLists.txt  package.xml
rotoscan_node/: CMakeLists.txt  package.xml
rotoscan_node/include/rotoscan/: base_client.hpp
rotoscan_node/launch/: laserscanner_tcp.launch  laserscanner_tty.launch
rotoscan_node/src/: rotoscan_ros_logging.hpp
src/: rotoscan_node.cc
timeutils/: CMakeLists.txt  package.xml
timeutils/include/timeutils/: time.hpp  timer.hpp
