<?xml version="1.0"?>
<package>
  <name>rotoscan_node</name>
  <version>0.0.0</version>
  <description>Driver for Leuze rotoScan laser rangefinder devices, publishing sensor_msgs/LaserScan messages. Currently supports devices connected via Ethernet and
     serial port, but could be extended to interface with other models.</description>
  <license>BSD</license>
  <author>Rene Wagner, Felix Kolbe</author>
  <maintainer email="todo@todo.com">todo</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>timeutils</build_depend>
  <build_depend>roslaunch</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>timeutils</run_depend>
</package>
